--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -121,5 +121,10 @@
     "title": "お問い合わせ",
     "description": "サハラサバカに関するお問い合わせ、スポンサーに関するお問い合わせは以下のフォームからお願いいたします。",
     "button": "お問い合わせフォームを開く"
+  },
+  "links": {
+    "title": "リンク集",
+    "github_description": "サハラサバクのGitHubリポジトリです。プロジェクトのソースコードやドキュメントを公開しています。",
+    "twitter_description": "サハラサバクの公式Twitterアカウントです。最新の活動情報や開発の進捗を発信しています。"
   }
 } 
